--- a/index.html
+++ b/index.html
@@ -12,9 +12,150 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="text-bg-dark">
-    <section class="a"></section>
-    <section class="b"></section>
-    <section class="c"></section>
+  <body>
+    <section class="text-bg-dark py-5">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-lg-6 d-flex flex-column justify-content-center align-items-center"
+          >
+            <div class="w-75">
+              <h2>Hi everyone,</h2>
+              <h1 class="display-3 fw-bold letter-spacing">I'm Mateusz.</h1>
+              <p class="lead text-justify">
+                A creative structural engineer specializing in reinforced
+                concrete structures. One day I started coding and realised that
+                it brings me a lot of satisfaction. Right now, I spend a lot of
+                time building my portfolio and steadfastly preparing to become a
+                professional software/web developer.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 text-center">
+            <img
+              src="./images/profile.jpg"
+              alt="mateusz"
+              class="my-5 img-fluid-400 rounded-circle border border-solid border-5 border-light"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h1 class="text-center my-5">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            fill="currentColor"
+            class="bi bi-arrow-down-left-square-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2zm8.096-10.803L6 9.293V6.525a.5.5 0 0 0-1 0V10.5a.5.5 0 0 0 .5.5h3.975a.5.5 0 0 0 0-1H6.707l4.096-4.096a.5.5 0 1 0-.707-.707"
+            />
+          </svg>
+          My carrer paths
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            fill="currentColor"
+            class="bi bi-arrow-down-right-square-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707"
+            />
+          </svg>
+        </h1>
+      </div>
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-lg-6 text-center">
+            <figure>
+              <img
+                src="./images/allplan.jpg"
+                alt="structure"
+                height="300"
+                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark my-3"
+              />
+              <figcaption class="h4">Civil Engineering</figcaption>
+            </figure>
+          </div>
+          <div class="col-lg-6 text-center">
+            <figure>
+              <img
+                src="./images/coding.jpg"
+                alt="coding"
+                height="300"
+                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark my-3"
+              />
+              <figcaption class="h4">Programming</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="text-bg-dark py-5">
+      <div class="container">
+        <h1 class="text-center mx-5">My programming skills</h1>
+        <div class="row mx-5">
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jquery/jquery-plain-wordmark.svg"
+              height="100"
+              class="mt-5"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div></div>
+    </section>
   </body>
 </html>
