--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
     <section class="text-bg-dark py-5">
       <div class="container">
-        <h1 class="text-center mx-5">My programming skills</h1>
+        <h1 class="text-center mx-5">Programming skills</h1>
         <div class="row mx-5">
           <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
             <img
@@ -154,8 +154,74 @@
         </div>
       </div>
     </section>
+    <section class="py-5">
+      <div class="container">
+        <h1 class="text-center mb-5">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            fill="currentColor"
+            class="bi bi-arrow-down-left-square-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2zm8.096-10.803L6 9.293V6.525a.5.5 0 0 0-1 0V10.5a.5.5 0 0 0 .5.5h3.975a.5.5 0 0 0 0-1H6.707l4.096-4.096a.5.5 0 1 0-.707-.707"
+            />
+          </svg>
+          Portfolio
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            fill="currentColor"
+            class="bi bi-arrow-down-right-square-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707"
+            />
+          </svg>
+        </h1>
+        <div class="row">
+          <div class="col-6 d-flex justify-content-center">
+            <a href="https://github.com/mateusz-przybyla" target="_blank"
+              ><img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                height="200"
+            /></a>
+          </div>
+          <div class="col-6 d-flex justify-content-center">
+            <a
+              href="https://mateusz-przybyla.github.io/Capstone-Project-1_Online-Resume/"
+              target="_blank"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="200"
+                height="200"
+                fill="#212529"
+                class="bi bi-file-person"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
+                />
+                <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section>
       <div></div>
+    </section>
+    <section class="text-bg-dark">
+      <div class="container">
+        <footer class="py-5">
+          <p class="text-center">© Mateusz Przybyła. All rights reserved.</p>
+        </footer>
+      </div>
     </section>
   </body>
 </html>
