Implemented last section

--- a/index.html
+++ b/index.html
@@ -184,37 +184,86 @@
           </svg>
         </h1>
         <div class="row">
-          <div class="col-6 d-flex justify-content-center">
-            <a href="https://github.com/mateusz-przybyla" target="_blank"
-              ><img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
-                height="200"
-            /></a>
-          </div>
-          <div class="col-6 d-flex justify-content-center">
-            <a
-              href="https://mateusz-przybyla.github.io/Capstone-Project-1_Online-Resume/"
-              target="_blank"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="200"
-                height="200"
-                fill="#212529"
-                class="bi bi-file-person"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
+          <div class="col-sm-6 d-flex justify-content-center text-center">
+            <figure>
+              <a
+                href="https://github.com/mateusz-przybyla"
+                target="_blank"
+                class="link"
+                ><img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                  height="200"
+                  class="my-3"
                 />
-                <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
-              </svg>
-            </a>
+                <figcaption class="h5">GitHub repository</figcaption></a
+              >
+            </figure>
+          </div>
+          <div class="col-sm-6 d-flex justify-content-center text-center">
+            <figure>
+              <a
+                href="https://mateusz-przybyla.github.io/Capstone-Project-1_Online-Resume/"
+                target="_blank"
+                class="link"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="200"
+                  height="200"
+                  fill="#212529"
+                  class="bi bi-file-person my-3"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
+                  />
+                  <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+                </svg>
+                <figcaption class="h5">Online Resume (HTML version)</figcaption>
+              </a>
+            </figure>
           </div>
         </div>
       </div>
     </section>
-    <section>
-      <div></div>
+    <section class="py-5">
+      <div class="container">
+        <h1 class="text-center mb-5">Examples of projects</h1>
+        <div class="row mx-5">
+          <div
+            class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
+          >
+            <a
+              href="https://mateusz-przybyla.github.io/Expenses-chart-component/"
+              target="_blank"
+              ><img
+                src="./images/project-1.jpg"
+                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+            /></a>
+          </div>
+          <div
+            class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
+          >
+            <a
+              href="https://mateusz-przybyla.github.io/Intro-component-with-sign-up-form/"
+              target="_blank"
+              ><img
+                src="./images/project-2.jpg"
+                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+            /></a>
+          </div>
+          <div
+            class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
+          >
+            <a
+              href="https://mateusz-przybyla.github.io/News-homepage/"
+              target="_blank"
+              ><img
+                src="./images/project-3.jpg"
+                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+            /></a>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="text-bg-dark">
       <div class="container">
