--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-6 text-center">
+          <div class="col-lg-6 text-center px-5">
             <img
               src="./images/profile.jpg"
               alt="mateusz"
@@ -72,7 +72,7 @@
         </h1>
       </div>
       <div class="container my-5">
-        <div class="row">
+        <div class="row px-5">
           <div class="col-lg-6 text-center">
             <figure>
               <img
@@ -227,7 +227,7 @@
     </section>
     <section class="py-5">
       <div class="container">
-        <h1 class="text-center mb-5">Examples of projects</h1>
+        <h1 class="text-center">Examples of projects</h1>
         <div class="row mx-5">
           <div
             class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
@@ -237,7 +237,7 @@
               target="_blank"
               ><img
                 src="./images/project-1.jpg"
-                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+                class="img-fluid-350 rounded-circle border border-solid border-5 border-dark mt-5"
             /></a>
           </div>
           <div
@@ -248,7 +248,7 @@
               target="_blank"
               ><img
                 src="./images/project-2.jpg"
-                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+                class="img-fluid-350 rounded-circle border border-solid border-5 border-dark mt-5"
             /></a>
           </div>
           <div
@@ -259,7 +259,7 @@
               target="_blank"
               ><img
                 src="./images/project-3.jpg"
-                class="img-fluid-300 rounded-circle border border-solid border-5 border-dark mt-5"
+                class="img-fluid-350 rounded-circle border border-solid border-5 border-dark mt-5"
             /></a>
           </div>
         </div>
