--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </section>
     <section>
       <div class="container">
-        <h1 class="text-center my-5">
+        <h2 class="text-center my-5">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="35"
+            height="35"
             fill="currentColor"
             class="bi bi-arrow-down-left-square-fill"
             viewBox="0 0 16 16"
@@ -59,8 +59,8 @@
           My carrer paths
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="35"
+            height="35"
             fill="currentColor"
             class="bi bi-arrow-down-right-square-fill"
             viewBox="0 0 16 16"
@@ -69,7 +69,7 @@
               d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707"
             />
           </svg>
-        </h1>
+        </h2>
       </div>
       <div class="container my-5">
         <div class="row px-5">
@@ -81,7 +81,7 @@
                 height="300"
                 class="img-fluid-300 rounded-circle border border-solid border-5 border-dark my-3"
               />
-              <figcaption class="h4">Civil Engineering</figcaption>
+              <figcaption class="fs-5">Civil Engineering</figcaption>
             </figure>
           </div>
           <div class="col-lg-6 text-center">
@@ -92,7 +92,7 @@
                 height="300"
                 class="img-fluid-300 rounded-circle border border-solid border-5 border-dark my-3"
               />
-              <figcaption class="h4">Programming</figcaption>
+              <figcaption class="fs-5">Programming</figcaption>
             </figure>
           </div>
         </div>
@@ -100,7 +100,7 @@
     </section>
     <section class="text-bg-dark py-5">
       <div class="container">
-        <h1 class="text-center mx-5">Programming skills</h1>
+        <h2 class="text-center mx-5">Programming skills</h2>
         <div class="row mx-5">
           <div class="col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center">
             <img
@@ -156,11 +156,11 @@
     </section>
     <section class="py-5">
       <div class="container">
-        <h1 class="text-center mb-5">
+        <h2 class="text-center mb-5">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="35"
+            height="35"
             fill="currentColor"
             class="bi bi-arrow-down-left-square-fill"
             viewBox="0 0 16 16"
@@ -172,8 +172,8 @@
           Portfolio
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="35"
+            height="35"
             fill="currentColor"
             class="bi bi-arrow-down-right-square-fill"
             viewBox="0 0 16 16"
@@ -182,7 +182,7 @@
               d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707"
             />
           </svg>
-        </h1>
+        </h2>
         <div class="row">
           <div class="col-sm-6 d-flex justify-content-center text-center">
             <figure>
@@ -195,7 +195,7 @@
                   height="200"
                   class="my-3"
                 />
-                <figcaption class="h5">GitHub repository</figcaption></a
+                <figcaption class="fs-5">GitHub repository</figcaption></a
               >
             </figure>
           </div>
@@ -218,7 +218,9 @@
                   />
                   <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                 </svg>
-                <figcaption class="h5">Online Resume (HTML version)</figcaption>
+                <figcaption class="fs-5">
+                  Online Resume (HTML version)
+                </figcaption>
               </a>
             </figure>
           </div>
@@ -227,7 +229,7 @@
     </section>
     <section class="py-5">
       <div class="container">
-        <h1 class="text-center">Examples of projects</h1>
+        <h2 class="text-center">Examples of projects</h2>
         <div class="row mx-5">
           <div
             class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center"
