--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <h1 class="display-3 fw-bold letter-spacing">I'm Mateusz.</h1>
               <p class="lead text-justify">
                 A creative structural engineer specializing in reinforced
-                concrete structures. One day I started coding and realised that
+                concrete structures. One day I started coding and realized that
                 it brings me a lot of satisfaction. Right now, I spend a lot of
                 time building my portfolio and steadfastly preparing to become a
                 professional software/web developer.
